--- a/open-ctr-benchmark/index.html
+++ b/open-ctr-benchmark/index.html
@@ -46,9 +46,6 @@
 <a href="#">MicroVideo-1.7M</a>
 </li>
 <li>
-<a href="#">KDDCup-2012</a>
-</li>
-<li>
 <a href="#">Frappe</a>
 </li>
 <li>
@@ -60,13 +57,19 @@
 <a href="#LeadBoard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">LeaderBoards</a>
 <ul class="collapse list-unstyled" id="LeadBoard">
 <li>
-<a href="./leaderboard/criteo_x4.html">criteo_x4</a>
+<a href="./leaderboards/criteo_x4_001.html">criteo_x4_001</a>
+</li>
+<li>
+<a href="./leaderboards/criteo_x4_002.html">criteo_x4_002</a>
 </li>
 <li>
 <a href="#">criteo_x0</a>
 </li>
 <li>
-<a href="#">avazu_x4</a>
+<a href="./leaderboards/avazu_x4_001.html">avazu_x4_001</a>
+</li>
+<li>
+<a href="./leaderboards/avazu_x4_002.html">avazu_x4_002</a>
 </li>
 <li>
 <a href="#">avazu_x0</a>
@@ -83,7 +86,7 @@
 </ul>
 </li>
 <li>
-<a href="#">Contributors</a>
+<a href="#">Call for Contributions</a>
 </li>
 <li>
 <a href="#Links" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Related Links</a>
