--- a/open-ctr-benchmark/index.html
+++ b/open-ctr-benchmark/index.html
@@ -19,37 +19,37 @@
 </button>
 </div>
 <div class="p-4 pt-5">
-<h1><a href="../index.html" class="logo">OpenCTR</a></h1>
+<h1><a href="./index.html" class="logo">OpenCTR</a></h1>
 <ul class="list-unstyled components mb-5">
 <li class="active">
-<a href="../index.html">Introduction</a>
+<a href="./index.html">Introduction</a>
 </li>
 <li>
-<a href="#">Models</a>
+<a href="./models.html">Models</a>
 </li>
 <li>
 <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Datasets</a>
 <ul class="collapse list-unstyled" id="pageSubmenu">
 <li>
-<a href="#">Criteo</a>
+<a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#Criteo" target="_blank">Criteo</a>
 </li>
 <li>
-<a href="#">Avazu</a>
+<a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#Avazu" target="_blank">Avazu</a>
 </li>
 <li>
-<a href="#">Taobao</a>
+<a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#Taobao" target="_blank">Taobao</a>
 </li>
 <li>
-<a href="#">KKBox</a>
+<a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#KKBox" target="_blank">KKBox</a>
 </li>
 <li>
-<a href="#">MicroVideo-1.7M</a>
+<a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#MicroVideo1.7M" target="_blank">MicroVideo1.7M</a>
 </li>
 <li>
-<a href="#">Frappe</a>
+<a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#Frappe" target="_blank">Frappe</a>
 </li>
 <li>
-<a href="#">MovieLens</a>
+<a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#MovieLens" target="_blank">MovieLens</a>
 </li>
 </ul>
 </li>
@@ -63,7 +63,7 @@
 <a href="./leaderboards/criteo_x4_002.html">criteo_x4_002</a>
 </li>
 <li>
-<a href="#">criteo_x0</a>
+<a href="#">criteo_x0_001</a>
 </li>
 <li>
 <a href="./leaderboards/avazu_x4_001.html">avazu_x4_001</a>
@@ -72,16 +72,16 @@
 <a href="./leaderboards/avazu_x4_002.html">avazu_x4_002</a>
 </li>
 <li>
-<a href="#">avazu_x0</a>
+<a href="#">avazu_x0_001</a>
 </li>
 <li>
-<a href="#">kkbox_x4</a>
+<a href="#">kkbox_x4_001</a>
 </li>
 <li>
-<a href="#">taobao_x0</a>
+<a href="#">taobao_x0_001</a>
 </li>
 <li>
-<a href="#">microvideo_1.7m_x0</a>
+<a href="#">microvideo1.7m_x0_001</a>
 </li>
 </ul>
 </li>
@@ -103,6 +103,7 @@
 <a href="#">Feedback</a>
 </li>
 </ul>
+
 <div class="mb-5">
 <h3 class="h6">Folk us on Github</h3>
 </div>
