--- a/open-ctr-benchmark/leaderboards/criteo_x4_002.html
+++ b/open-ctr-benchmark/leaderboards/criteo_x4_002.html
@@ -20,37 +20,37 @@
 </button>
 </div>
 <div class="p-4 pt-5">
-<h1><a href="index.html" class="logo">OpenCTR</a></h1>
+<h1><a href="../index.html" class="logo">OpenCTR</a></h1>
 <ul class="list-unstyled components mb-5">
 <li class="active">
-<a href="./index.html">Introduction</a>
+<a href="../index.html">Introduction</a>
 </li>
 <li>
-<a href="#">Models</a>
+<a href="../models.html">Models</a>
 </li>
 <li>
 <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Datasets</a>
 <ul class="collapse list-unstyled" id="pageSubmenu">
 <li>
-<a href="#">Criteo</a>
+<a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#Criteo" target="_blank">Criteo</a>
 </li>
 <li>
-<a href="#">Avazu</a>
+<a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#Avazu" target="_blank">Avazu</a>
 </li>
 <li>
-<a href="#">Taobao</a>
+<a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#Taobao" target="_blank">Taobao</a>
 </li>
 <li>
-<a href="#">KKBox</a>
+<a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#KKBox" target="_blank">KKBox</a>
 </li>
 <li>
-<a href="#">MicroVideo-1.7M</a>
+<a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#MicroVideo1.7M" target="_blank">MicroVideo1.7M</a>
 </li>
 <li>
-<a href="#">Frappe</a>
+<a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#Frappe" target="_blank">Frappe</a>
 </li>
 <li>
-<a href="#">MovieLens</a>
+<a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#MovieLens" target="_blank">MovieLens</a>
 </li>
 </ul>
 </li>
