--- a/ctr-prediction/leaderboards/avazu_x4_002.html
+++ b/ctr-prediction/leaderboards/avazu_x4_002.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/open-ctr-benchmark/css/style.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.css"/>
 <meta name="robots" content="noindex, follow">
 </head>
@@ -124,57 +124,17 @@
 </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="../js/popper.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-<script src="../js/main.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/open-ctr-benchmark/js/popper.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/open-ctr-benchmark/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/open-ctr-benchmark/js/main.js"></script>
 
 <script src="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/no-data-to-display.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/open-ctr-benchmark/js/tablecharts.js"></script>
 <script type="text/javascript">
-  $(document).ready(function () {
-    $('#table1').DataTable({
-      "pageLength": 10,
-      "lengthMenu": [[10, 20, 50, -1], [10, 20, 50, "All"]],
-      "ajax": {
-        "url": "https://raw.githubusercontent.com/xue-pai/Open-CTR-Benchmark/master/results/avazu_x4_002.json",
-        "dataSrc": "data"
-      },
-      "columnDefs": [
-      {
-        "targets": 5,
-        render: function (data, type, row, meta)
-        {
-            if (type === 'display')
-            {
-                data = '<a href=' + data + '>Link</a>';
-            }
-            return data;
-        }
-      },
-      {
-        "targets": 6,
-        render: function (data, type, row, meta)
-        {
-            if (type === 'display')
-            {
-                data = '<a href=https://github.com/' + data + '>' + data + '</a>';
-            }
-            return data;
-        }
-      }
-      ],
-      "columns": [
-        { "data": "year", "title": "Year" },
-        { "data": "pub", "title": "Publication" },
-        { "data": "model", "title": "Model" },
-        { "data": "logloss", "title": "Logloss" },
-        { "data": "auc", "title": "AUC" },
-        { "data": "link", "title": "Steps-to-Reproduce"},
-        { "data": "contr", "title": "Contributor" }
-      ]
-    });
-});
+  $(document).ready(result_tab ('#table1', 
+  "https://cdn.jsdelivr.net/gh/xue-pai/open-ctr-benchmark/results/avazu_x4_002.json"));
 </script>
 </body>
 </html>
