--- a/ctr-prediction/leaderboards/avazu_x4_001.html
+++ b/ctr-prediction/leaderboards/avazu_x4_001.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/open-ctr-benchmark/css/style.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.css"/>
 <meta name="robots" content="noindex, follow">
 </head>
@@ -20,13 +20,13 @@
 </button>
 </div>
 <div class="p-4 pt-5">
-<h1><a href="index.html" class="logo">OpenCTR</a></h1>
+<h1><a href="../index.html" class="logo">OpenCTR</a></h1>
 <ul class="list-unstyled components mb-5">
 <li class="active">
-<a href="index.html">Introduction</a>
+<a href="../index.html">Introduction</a>
 </li>
 <li>
-<a href="models.html">Models</a>
+<a href="../models.html">Models</a>
 </li>
 <li>
 <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Datasets</a>
@@ -58,19 +58,19 @@
 <a href="#LeadBoard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">LeaderBoards</a>
 <ul class="collapse list-unstyled" id="LeadBoard">
 <li>
-<a href="./leaderboards/criteo_x4_001.html">criteo_x4_001</a>
+<a href="./criteo_x4_001.html">criteo_x4_001</a>
 </li>
 <li>
-<a href="./leaderboards/criteo_x4_002.html">criteo_x4_002</a>
+<a href="./criteo_x4_002.html">criteo_x4_002</a>
 </li>
 <li>
 <a href="#">criteo_x0_001</a>
 </li>
 <li>
-<a href="./leaderboards/avazu_x4_001.html">avazu_x4_001</a>
+<a href="./avazu_x4_001.html">avazu_x4_001</a>
 </li>
 <li>
-<a href="./leaderboards/avazu_x4_002.html">avazu_x4_002</a>
+<a href="./avazu_x4_002.html">avazu_x4_002</a>
 </li>
 <li>
 <a href="#">avazu_x0_001</a>
@@ -114,7 +114,7 @@
 </nav>
 
 <div id="content" class="p-4 p-md-5 pt-5">
-<h2 class="mb-4">A List of CTR Prediction Models</h2>
+<h2 class="mb-4">Benchmarking on avazu_x4_001</h2>
 <p>Welecome to the open benchmarking site for CTR prediction.</p>
 
 <!-- Add data table -->
@@ -124,32 +124,17 @@
 </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="./js/popper.js"></script>
-<script src="./js/bootstrap.min.js"></script>
-<script src="./js/main.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/open-ctr-benchmark/js/popper.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/open-ctr-benchmark/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/open-ctr-benchmark/js/main.js"></script>
 
 <script src="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/no-data-to-display.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/open-ctr-benchmark/js/tablecharts.js"></script>
 <script type="text/javascript">
-  $(document).ready(function () {
-    $('#table1').DataTable({
-      "pageLength": 20,
-      "lengthMenu": [[10, 20, 50, -1], [10, 20, 50, "All"]],
-      "ajax": {
-        "url": "https://raw.githubusercontent.com/xue-pai/Open-CTR-Benchmark/master/models/papers.json",
-        "dataSrc": "data"
-      },
-      "columns": [
-        { "data": "year", "title": "Year" },
-        { "data": "pub", "title": "Publication" },
-        { "data": "model", "title": "Model" },
-        { "data": "paper", "title": "Paper" },
-        { "data": "available", "title": "Available" },
-        { "data": "tags", "title": "Tags" }
-      ]
-    });
-});
+  $(document).ready(result_tab ('#table1', 
+  "https://cdn.jsdelivr.net/gh/xue-pai/open-ctr-benchmark/results/avazu_x4_001.json"));
 </script>
 </body>
 </html>
