--- a/ctr-prediction/models.html
+++ b/ctr-prediction/models.html
@@ -133,7 +133,7 @@
 <script src="https://code.highcharts.com/modules/no-data-to-display.js"></script>
 <script src="./js/tablecharts.js"></script>
 <script type="text/javascript">
-  $(document).ready(model_tab ('#table1',
+  $(document).ready(model_tab ('table1',
     "https://cdn.jsdelivr.net/gh/xue-pai/open-ctr-benchmark/models/papers.json"));
 </script>
 </body>
