--- a/ctr-prediction/leaderboards/avazu_x4_001.html
+++ b/ctr-prediction/leaderboards/avazu_x4_001.html
@@ -131,7 +131,7 @@
 <script src="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/no-data-to-display.js"></script>
-<script src="./js/tablecharts.js"></script>
+<script src="../js/tablecharts.js"></script>
 <script type="text/javascript">
   $(document).ready(result_tab ('table1', 
   "https://cdn.jsdelivr.net/gh/xue-pai/open-ctr-benchmark/results/avazu_x4_001.json"));
