--- a/ctr-prediction/index.html
+++ b/ctr-prediction/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/open-ctr-benchmark/css/style.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/css/style.css">
 <meta name="robots" content="noindex, follow">
 </head>
 
@@ -54,22 +54,22 @@
 </ul>
 </li>
 <li>
-<a href="#LeadBoard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">LeaderBoards</a>
+<a href="#LeadBoard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">LeaderBoard</a>
 <ul class="collapse list-unstyled" id="LeadBoard">
 <li>
-<a href="./leaderboards/criteo_x4_001.html">criteo_x4_001</a>
+<a href="./leaderboard/criteo_x4_001.html">criteo_x4_001</a>
 </li>
 <li>
-<a href="./leaderboards/criteo_x4_002.html">criteo_x4_002</a>
+<a href="./leaderboard/criteo_x4_002.html">criteo_x4_002</a>
 </li>
 <li>
 <a href="#">criteo_x0_001</a>
 </li>
 <li>
-<a href="./leaderboards/avazu_x4_001.html">avazu_x4_001</a>
+<a href="./leaderboard/avazu_x4_001.html">avazu_x4_001</a>
 </li>
 <li>
-<a href="./leaderboards/avazu_x4_002.html">avazu_x4_002</a>
+<a href="./leaderboard/avazu_x4_002.html">avazu_x4_002</a>
 </li>
 <li>
 <a href="#">avazu_x0_001</a>
@@ -119,8 +119,8 @@
 </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/open-ctr-benchmark/js/popper.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/open-ctr-benchmark/js/bootstrap.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/open-ctr-benchmark/js/main.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/popper.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/main.js"></script>
 </body>
 </html>
