--- a/collaborative-filtering/models.html
+++ b/collaborative-filtering/models.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>Open-CTR-Benchmark</title>
+    <title>Open-CF-Benchmark</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/collaborative-filtering/css/style.css">
+    <link rel="stylesheet" href="https://openbenchmark.github.io/collaborative-filtering/css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.css" />
     <meta name="robots" content="noindex, follow">
 </head>
@@ -125,9 +125,9 @@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/collaborative-filtering/js/popper.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/collaborative-filtering/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/collaborative-filtering/js/main.js"></script>
+    <script src="https://openbenchmark.github.io//collaborative-filtering/js/popper.js"></script>
+    <script src="https://openbenchmark.github.io//collaborative-filtering/js/bootstrap.min.js"></script>
+    <script src="https://openbenchmark.github.io//collaborative-filtering/js/main.js"></script>
 
     <script src="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
