--- a/collaborative-filtering/index.html
+++ b/collaborative-filtering/index.html
@@ -20,7 +20,7 @@
 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1 style="font-size:34px"><a href="./index.html" class="logo">Open CF Benchmark</a></h1>
+                <h1 style="font-size:34px"><a href="./index.html" class="logo">OpenCF Benchmark</a></h1>
                 <ul class="list-unstyled components mb-5">
                     <li class="active">
                         <a href="./index.html">Introduction</a>
@@ -93,7 +93,7 @@
                         <a href="#Links" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Related Links</a>
                         <ul class="collapse list-unstyled" id="Links">
                             <li>
-                                <a href="#">OpenCF package</a>
+                                <a href="#">Fuxictr package</a>
                             </li>
                             <li>
                                 <a href="#">Open-CF-Benchmark</a>
