--- a/collaborative-filtering/models.html
+++ b/collaborative-filtering/models.html
@@ -21,7 +21,7 @@
 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1 style="font-size:34px"><a href="./index.html" class="logo">Open-CF-Benchmark</a></h1>
+                <h1 style="font-size:34px"><a href="./index.html" class="logo">OpenCF Benchmark</a></h1>
                 <ul class="list-unstyled components mb-5">
                     <li class="active">
                         <a href="index.html">Introduction</a>
@@ -33,25 +33,25 @@
                         <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Datasets</a>
                         <ul class="collapse list-unstyled" id="pageSubmenu">
                             <li>
-                                <a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#Criteo" target="_blank">Criteo</a>
+                                <a href="https://github.com/xue-pai/Open-CF-Benchmark/blob/master/datasets.md#Criteo" target="_blank">Criteo</a>
                             </li>
                             <li>
-                                <a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#Avazu" target="_blank">Avazu</a>
+                                <a href="https://github.com/xue-pai/Open-CF-Benchmark/blob/master/datasets.md#Avazu" target="_blank">Avazu</a>
                             </li>
                             <li>
-                                <a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#Taobao" target="_blank">Taobao</a>
+                                <a href="https://github.com/xue-pai/Open-CF-Benchmark/blob/master/datasets.md#Taobao" target="_blank">Taobao</a>
                             </li>
                             <li>
-                                <a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#KKBox" target="_blank">KKBox</a>
+                                <a href="https://github.com/xue-pai/Open-CF-Benchmark/blob/master/datasets.md#KKBox" target="_blank">KKBox</a>
                             </li>
                             <li>
-                                <a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#MicroVideo1.7M" target="_blank">MicroVideo1.7M</a>
+                                <a href="https://github.com/xue-pai/Open-CF-Benchmark/blob/master/datasets.md#MicroVideo1.7M" target="_blank">MicroVideo1.7M</a>
                             </li>
                             <li>
-                                <a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#Frappe" target="_blank">Frappe</a>
+                                <a href="https://github.com/xue-pai/Open-CF-Benchmark/blob/master/datasets.md#Frappe" target="_blank">Frappe</a>
                             </li>
                             <li>
-                                <a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/datasets.md#MovieLens" target="_blank">MovieLens</a>
+                                <a href="https://github.com/xue-pai/Open-CF-Benchmark/blob/master/datasets.md#MovieLens" target="_blank">MovieLens</a>
                             </li>
                         </ul>
                     </li>
@@ -115,8 +115,8 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">A List of CTR Prediction Models</h2>
-            <p>Welcome to the open benchmarking site for CTR prediction.</p>
+            <h2 class="mb-4">A List of CF Models</h2>
+            <p>Welcome to the open benchmarking site for CF.</p>
 
             <!-- Add data table -->
             <table id="table1" class="table table-bordered">
@@ -125,9 +125,9 @@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/popper.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/collaborative-filtering/js/popper.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/collaborative-filtering/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/collaborative-filtering/js/main.js"></script>
 
     <script src="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
