--- a/collaborative-filtering/models.html
+++ b/collaborative-filtering/models.html
@@ -97,7 +97,7 @@
                                 <a href="#">FuxiCTR package</a>
                             </li>
                             <li>
-                                <a href="#">Open-CF-Benchmark</a>
+                                <a href="https://openbenchmark.github.io/ctr-prediction">Open-CTR-Benchmark</a>
                             </li>
                         </ul>
                     </li>
