--- a/collaborative-filtering/models.html
+++ b/collaborative-filtering/models.html
@@ -59,31 +59,13 @@
                         <a href="#LeadBoard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">LeaderBoard</a>
                         <ul class="collapse list-unstyled" id="LeadBoard">
                             <li>
-                                <a href="./leaderboard/criteo_x4_001.html">criteo_x4_001</a>
+                                <a href="./leaderboard/amazonbooks_x0.html">amazonbooks_x0</a>
                             </li>
                             <li>
-                                <a href="./leaderboard/criteo_x4_002.html">criteo_x4_002</a>
+                                <a href="./leaderboard/yelp18_x0.html">yelp18_x0</a>
                             </li>
                             <li>
-                                <a href="#">criteo_x0_001</a>
-                            </li>
-                            <li>
-                                <a href="./leaderboard/avazu_x4_001.html">avazu_x4_001</a>
-                            </li>
-                            <li>
-                                <a href="./leaderboard/avazu_x4_002.html">avazu_x4_002</a>
-                            </li>
-                            <li>
-                                <a href="#">avazu_x0_001</a>
-                            </li>
-                            <li>
-                                <a href="#">kkbox_x4_001</a>
-                            </li>
-                            <li>
-                                <a href="#">taobao_x0_001</a>
-                            </li>
-                            <li>
-                                <a href="#">microvideo1.7m_x0_001</a>
+                                <a href="./leaderboard/gowalla_x0.html">gowalla_x0</a>
                             </li>
                         </ul>
                     </li>
