--- a/collaborative-filtering/leaderboard/amazonbooks_x0.html
+++ b/collaborative-filtering/leaderboard/amazonbooks_x0.html
@@ -59,13 +59,13 @@
                         <a href="#LeadBoard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">LeaderBoard</a>
                         <ul class="collapse list-unstyled" id="LeadBoard">
                             <li>
-                                <a href="./leaderboard/amazonbooks_x0.html">amazonbooks_x0</a>
+                                <a href="./amazonbooks_x0.html">amazonbooks_x0</a>
                             </li>
                             <li>
-                                <a href="./leaderboard/yelp18_x0.html">yelp18_x0</a>
+                                <a href="./yelp18_x0.html">yelp18_x0</a>
                             </li>
                             <li>
-                                <a href="./leaderboard/gowalla_x0.html">gowalla_x0</a>
+                                <a href="./gowalla_x0.html">gowalla_x0</a>
                             </li>
                         </ul>
                     </li>
