--- a/collaborative-filtering/leaderboard/yelp18_x0.html
+++ b/collaborative-filtering/leaderboard/yelp18_x0.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Open-CTR-Benchmark</title>
+    <title>Open-CF-Benchmark</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
