--- a/collaborative-filtering/leaderboard/gowalla_x0.html
+++ b/collaborative-filtering/leaderboard/gowalla_x0.html
@@ -21,7 +21,7 @@
 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1 style="font-size:34px"><a href="../index.html" class="logo">OpenCTR Benchmark</a></h1>
+                <h1 style="font-size:34px"><a href="../index.html" class="logo">OpenCF Benchmark</a></h1>
                 <ul class="list-unstyled components mb-5">
                     <li class="active">
                         <a href="../index.html">Introduction</a>
@@ -98,7 +98,7 @@
 
         <div id="content" class="p-4 p-md-5 pt-5">
             <h2 class="mb-4">Benchmarking on gowalla_x0</h2>
-            <p>Welecome to the open benchmarking site for CTR prediction.</p>
+            <p>Welecome to the open benchmarking site for CF prediction.</p>
 
             <!-- Add tables and charts -->
             <div id="chart1"></div>
@@ -118,7 +118,7 @@
     <script src="../js/tablecharts.js"></script>
     <script type="text/javascript">
         $(document).ready(createTableChart('table1', 'chart1',
-            "https://cdn.jsdelivr.net/gh/xue-pai/open-ctr-benchmark/results/avazu_x4_001.json"));
+            "https://cdn.jsdelivr.net/gh/xue-pai/Open-CF-Benchmark/results/gowalla_x0.json"));
     </script>
 </body>
 
