--- a/ctr-prediction/models.html
+++ b/ctr-prediction/models.html
@@ -97,7 +97,7 @@
                                 <a href="#">FuxiCTR package</a>
                             </li>
                             <li>
-                                <a href="#">Open-CF-Benchmark</a>
+                                <a href="https://openbenchmark.github.io/collaborative-filtering">Open-CF-Benchmark</a>
                             </li>
                         </ul>
                     </li>
