--- a/collaborative-filtering/index.html
+++ b/collaborative-filtering/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Open-CF-Benchmark</title>
+    <title>Open-Matching-Benchmark</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -103,8 +103,8 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">Open Benchmarking for CF</h2>
-            <p>Welcome to the open benchmarking site for CF.</p>
+            <h2 class="mb-4">Open Benchmarking for candidate item matching</h2>
+            <p>Welcome to the open benchmarking site for candidate item matching.</p>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
