--- a/collaborative-filtering/models.html
+++ b/collaborative-filtering/models.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Open-CF-Benchmark</title>
+    <title>Open-Matching-Benchmark Models</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -65,20 +65,20 @@
                         <a href="#LeadBoard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">LeaderBoard</a>
                         <ul class="collapse list-unstyled" id="LeadBoard">
                             <li>
-                                <a href="./leaderboard/amazonbooks_x0.html">amazonbooks_x0</a>
+                                <a href="./leaderboard/amazonbooks_x0.html">amazonbooks_x0_001</a>
                             </li>
                             <li>
-                                <a href="./leaderboard/yelp18_x0.html">yelp18_x0</a>
+                                <a href="./leaderboard/yelp18_x0.html">yelp18_x0_001</a>
                             </li>
                             <li>
-                                <a href="./leaderboard/gowalla_x0.html">gowalla_x0</a>
+                                <a href="./leaderboard/gowalla_x0.html">gowalla_x0_001</a>
                             </li>
                         </ul>
                     </li>
                     <li>
                         <a href="#">Call for Contributions</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="#Links" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Related Links</a>
                         <ul class="collapse list-unstyled" id="Links">
                             <li>
@@ -88,7 +88,7 @@
                                 <a href="https://openbenchmark.github.io/ctr-prediction">Open-CTR-Benchmark</a>
                             </li>
                         </ul>
-                    </li>
+                    </li> -->
                     <li>
                         <a href="#">Feedback</a>
                     </li>
@@ -96,15 +96,15 @@
                 <div class="mb-5">
                     <h3 class="h6">Fork on Github</h3>
                 </div>
-                <div class="mb-5">
+                <!-- <div class="mb-5">
                     <h3 class="h6">Join Wechat Group</h3>
-                </div>
+                </div> -->
             </div>
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">A List of CF Models</h2>
-            <p>Welcome to the open benchmarking site for CF.</p>
+            <h2 class="mb-4">A List of Candidate Item Matching Models</h2>
+            <p>Welcome to the open benchmarking site for candidate item matching.</p>
 
             <!-- Add data table -->
             <table id="table1" class="table table-bordered">
