--- a/ctr-prediction/index.html
+++ b/ctr-prediction/index.html
@@ -106,8 +106,8 @@
                 </ul>
 
                 <div class="mb-5">
-                    <button class="h6">Folk us on Github</button>
-                    <!-- <h3 class="h6">Folk us on Github</h3> -->
+                    <!-- <button></button> -->
+                    <h3 class="h6">Folk us on Github</h3>
                 </div>
                 <div class="mb-5">
                     <h3 class="h6">Join Wechat Group</h3>
