--- a/collaborative-filtering/leaderboard/amazonbooks_x0.html
+++ b/collaborative-filtering/leaderboard/amazonbooks_x0.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Open-CF-Benchmark</title>
+    <title>Open-Matching-Benchmark Models</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,7 +21,7 @@
 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1 style="font-size:34px"><a href="../index.html" class="logo">OpenCF Benchmark</a></h1>
+                <h1 style="font-size:34px"><a href="../index.html" class="logo">Open Matching Benchmark</a></h1>
                 <ul class="list-unstyled components mb-5">
                     <li class="active">
                         <a href="../index.html">Introduction</a>
@@ -104,8 +104,7 @@
 
         <div id="content" class="p-4 p-md-5 pt-5">
             <h2 class="mb-4">Benchmarking on amazonbooks_x0</h2>
-            <p>Welecome to the open benchmarking site for CF prediction.</p>
-
+            <p>Welcome to the open benchmarking site for candidate item matching.</p>
             <!-- Add tables and charts -->
             <div id="chart1"></div>
             <p><br></p>
