--- a/collaborative-filtering/leaderboard/gowalla_x0.html
+++ b/collaborative-filtering/leaderboard/gowalla_x0.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Open-CF-Benchmark</title>
+    <title>Open-Matching-Benchmark Models</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -104,7 +104,7 @@
 
         <div id="content" class="p-4 p-md-5 pt-5">
             <h2 class="mb-4">Benchmarking on gowalla_x0</h2>
-            <p>Welecome to the open benchmarking site for CF prediction.</p>
+            <p>Welcome to the open benchmarking site for candidate item matching.</p>
 
             <!-- Add tables and charts -->
             <div id="chart1"></div>
