--- a/collaborative-filtering/leaderboard/gowalla_x0.html
+++ b/collaborative-filtering/leaderboard/gowalla_x0.html
@@ -21,7 +21,7 @@
 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1 style="font-size:34px"><a href="../index.html" class="logo">OpenCF Benchmark</a></h1>
+                <h1 style="font-size:34px"><a href="../index.html" class="logo">Open Matching Benchmark</a></h1>
                 <ul class="list-unstyled components mb-5">
                     <li class="active">
                         <a href="../index.html">Introduction</a>
